--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "states.js" defer></script>
-    <script src = "customers.js" defer></script>
+    <script src = "moment.js"></script>
+    <script src = "states.js"></script>
+    <script src = "customers.js"></script>
     <script src = "main.js" defer></script>
     <title>Document</title>
 </head>
 <body>
     <div id = "container">
-        <ul id = "people">
-        </ul>
+        
     </div>
 </body>
 </html>
